# FileReceivingServer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: .github.yml
client/: client.py
doc/: protocol.txt
src/: Application.h  FileReceivingServer.cpp  FileReceivingServer.h  Request.cpp  Request.h  RequestCache.cpp  RequestCache.h  RequestHandler.h  Server.h  UdpServer.cpp  UdpServer.h  main.cpp
src/client/: client.py
src/linux/: UdpServer.cpp  UdpServer.h
src/windows/: UdpServer.cpp  UdpServer.h
